// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderForm disables fields and buttons when submitting 1`] = `
<Form
  onSubmit={[Function]}
>
  <Panel
    accent={true}
    title="Provision Single Sign-On"
  >
    <Panel.Section
      className="step"
    >
      <h6>
        Step 1: Setup Callback URL
      </h6>
      <p>
        To complete setup with your Identity Provider (IdP), you will need to provide the following callback URL.
      </p>
      <p>
        <CopyField
          hideCopy={false}
          value="http://fake-api-test-host.com/users/saml/consume"
        />
      </p>
    </Panel.Section>
    <Panel.Section
      className="step"
    >
      <h6>
        Step 2: Upload your Security Assertion Markup Language (SAML)
      </h6>
      <p>
        This is a configuration file that can be downloaded from your IdP.
      </p>
      <p>
        <Field
          component={[Function]}
          disabled={true}
          filetype="xml"
          helpText="
                  If you already provided a file, reprovisioning will replace your current
                  configuration.
                "
          name="samlFile"
          type="file"
          validate={
            Array [
              [Function],
              [Function],
              [Function],
            ]
          }
        />
      </p>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        type="submit"
      >
        Provision SSO
      </Button>
      <Button
        className="cancel"
        onClick={[Function]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;

exports[`ProviderForm renders form 1`] = `
<Form
  onSubmit={[Function]}
>
  <Panel
    accent={true}
    title="Provision Single Sign-On"
  >
    <Panel.Section
      className="step"
    >
      <h6>
        Step 1: Setup Callback URL
      </h6>
      <p>
        To complete setup with your Identity Provider (IdP), you will need to provide the following callback URL.
      </p>
      <p>
        <CopyField
          hideCopy={false}
          value="http://fake-api-test-host.com/users/saml/consume"
        />
      </p>
    </Panel.Section>
    <Panel.Section
      className="step"
    >
      <h6>
        Step 2: Upload your Security Assertion Markup Language (SAML)
      </h6>
      <p>
        This is a configuration file that can be downloaded from your IdP.
      </p>
      <p>
        <Field
          component={[Function]}
          filetype="xml"
          helpText="
                  If you already provided a file, reprovisioning will replace your current
                  configuration.
                "
          name="samlFile"
          type="file"
          validate={
            Array [
              [Function],
              [Function],
              [Function],
            ]
          }
        />
      </p>
    </Panel.Section>
    <Panel.Section>
      <Button
        primary={true}
        size="default"
        type="submit"
      >
        Provision SSO
      </Button>
      <Button
        className="cancel"
        onClick={[Function]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</Form>
`;
